Some mysql and bug fix